fixed overflow in layout

--- a/frontend/src/assets/styles/basics/_layout.scss
+++ b/frontend/src/assets/styles/basics/_layout.scss
@@ -1,6 +1,6 @@
 
 .main-layout {
-    overflow: hidden;
+    // overflow: hidden;
     // position: absolute;
   margin: 0;
   height: 100vh;
@@ -15,7 +15,7 @@
     grid-area: sidebar;
     height: 100vh;
     width: 100%;
-    overflow: hidden;
+    // overflow: hidden;
   }
 
   .header {
@@ -23,13 +23,13 @@
     grid-area: header;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    // overflow: hidden;
   }
 
   .details {
     grid-area: details;
-    // height: 100%;
-    // width: 100%;
+    height: 100%;
+    width: 100%;
     overflow: scroll;
   }
 }
